--- a/package.json
+++ b/package.json
@@ -10,13 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.8.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.4.1",
     "react": "18.3.1",
     "react-native": "0.75.3",
+    "react-native-gesture-handler": "^2.19.0",
+    "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "^3.15.2",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
+    "react-native-snap-carousel": "^1.6.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
@@ -26,8 +35,9 @@
     "@react-native/babel-preset": "0.75.3",
     "@react-native/eslint-config": "0.75.3",
     "@react-native/metro-config": "0.75.3",
-    "@react-native/typescript-config": "0.75.3",
+    "@react-native/typescript-config": "^0.75.3",
     "@types/react": "^18.2.6",
+    "@types/react-native-snap-carousel": "^3.8.11",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
