--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native": "0.75.3",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-image-picker": "^7.1.2",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.15.4",
     "react-native-safe-area-context": "^4.11.0",
