--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-snap-carousel": "^1.6.1",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
     "util": "^0.12.5"
   },
