--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@awrminkhodaei/react-native-horizontal-datepicker": "^0.1.6",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/hooks": "^3.0.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-native-picker/picker": "^2.8.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
@@ -38,6 +39,8 @@
     "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
     "util": "^0.12.5"
   },
   "devDependencies": {
