--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@awrminkhodaei/react-native-horizontal-datepicker": "^0.1.6",
+    "@notifee/react-native": "^9.1.2",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/hooks": "^3.0.0",
@@ -26,18 +27,22 @@
     "moment-jalaali": "^0.10.1",
     "react": "18.3.1",
     "react-native": "0.75.3",
+    "react-native-date-picker": "^5.0.7",
+    "react-native-elements": "^3.4.3",
     "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-paper": "^5.12.5",
     "react-native-picker-select": "^9.3.1",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.15.4",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-snap-carousel": "^1.6.1",
     "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.2.1",
+    "react-native-ui-datepicker": "^2.0.4",
     "react-native-vector-icons": "^10.2.0",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
