--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment-jalaali": "^0.10.1",
     "react": "18.3.1",
     "react-native": "0.75.3",
+    "react-native-calendars": "^1.1307.0",
     "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-image-picker": "^7.1.2",
