--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-paper": "^5.12.5",
     "react-native-picker-select": "^9.3.1",
-    "react-native-reanimated": "^3.15.4",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-snap-carousel": "^1.6.1",
@@ -47,7 +46,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
     "@babel/runtime": "^7.20.0",
     "@react-native/babel-preset": "0.75.3",
     "@react-native/eslint-config": "0.75.3",
@@ -58,9 +58,11 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-reanimated": "^3.16.1",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
