--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-snap-carousel": "^1.6.1",
+    "react-native-svg": "^15.8.0",
     "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-ui-datepicker": "^2.0.4",
