--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-image-picker": "^7.1.2",
+    "react-native-logger": "^1.0.3",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-paper": "^5.12.5",
     "react-native-picker-select": "^9.3.1",
